airflow-web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: airflow-web
spec:
  to:
    kind: Service
    name: airflow
  port:
    targetPort: 8080
  tls:
    termination: edge
